# escenarios-financieros-sinteticos

./: .gitignore  AGENTS.md  LICENSE  README.md  bibliografia.bib  estilo_unir-1.sty  memoria.tex  plantilla.tex  pyproject.toml  requirements-cuda.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: fresh-install-test.yml  latex.yml  python-tests.yml
docs/: flujo_codigo.md  metricas_experimento.md  resumen_tarea_baselines_shrinkage.md  resumen_tarea_timegan_multiseed.md  resumen_tearea_baselines_shrinkage.md  tarea_lola_baselines_shrinkage.md  tarea_maria_jose_timegan_model_selection.md
scripts/: compile-local-windows.ps1  compile-local.sh  generate-result-figures.py  setup-ci-windows.ps1  setup-local-windows.ps1  setup-local.sh
src/tfm_pipeline/: __init__.py  compare_results.py  config.py  data.py  evaluation.py  experiment_data.py  metadata.py  model_selection.py  optimization.py  report_timegan_multiseed.py  run_baselines.py  run_timegan.py  run_timegan_multiseed.py  run_vae.py  synthetic_evaluation.py
src/tfm_pipeline/models/: __init__.py  timegan.py  vae.py
tests/unit/: test_data.py  test_evaluation.py  test_experiment_data.py  test_metadata.py  test_model_selection.py  test_optimization.py  test_return_data.py  test_torch_device.py
